solved microsoft machine coding question

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
+.all-btn-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.name-btn{
+  border: 1px solid #414141;
+  padding: 15px;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.selected{
+border:  2px solid blue;
+}
+
+.correct{
+  border: 3px solid #66cc99;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.incorrect{
+  border: 3px solid red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
